--- a/Example5/5-11/CMakeLists.txt
+++ b/Example5/5-11/CMakeLists.txt
@@ -5,7 +5,4 @@ set(CMAKE_CXX_STANDARD 14)
 
 include_directories(.)
 
-add_executable(5_11
-        5_11.cc
-        account.cc
-        account.h)
+add_executable(5_11 5_11.cc account.cc account.h)
